--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,11 +1,25 @@
 <div class="row">
-  <div class="col-4 offset-1">
-    <h1>Search By</h1>
-    <input type="text" name="" value="City">
-    <button class="btn btn-primary">Search</button>
-    <h3>Or</h3>
-    <input type="text" name="" value="Longitutde">
-    <input type="text" name="" value="Latitude">
-    <button class="btn btn-primary">Search</button>
+  <div class="col-5 offset-1">
+    <form [formGroup]="searchForm" (ngSubmit)="onSubmit()" >
+      <h1>Search By</h1>
+      <input type="text"
+        placeholder="City"
+        formControlName="city">
+      <button class="btn btn-primary"
+        type="button"
+        (click)='getCity()'
+        >Search</button>
+      <h3>Or</h3>
+      <input type="text"
+        placeholder="Longitutde"
+        formControlName="lon">
+      <input type="text"
+        placeholder="Latitude"
+        formControlName="lat">
+      <button class="btn btn-primary"
+        type="button"
+        (ngSubmit)='getLonLat()'
+        >Search</button>
+    </form>
   </div>
 </div>
