--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,25 +1,35 @@
 <div class="row">
   <div class="col-5 offset-1">
-    <form [formGroup]="searchForm" (ngSubmit)="onSubmit()" >
-      <h1>Search By</h1>
+    <form [formGroup]="searchForm" >
+    <h1>Search by:</h1>
+    <div class="form-row">
       <input type="text"
+        class= "form-control col"
         placeholder="City"
         formControlName="city">
+        <br />
       <button class="btn btn-primary"
         type="button"
         (click)='getCity()'
         >Search</button>
-      <h3>Or</h3>
+    </div>
+      <h3 class="or">Or</h3>
+    <div class="form-row">
       <input type="text"
+        class= "form-control col"
         placeholder="Longitutde"
         formControlName="lon">
+      <br />
       <input type="text"
+        class= "form-control col"
         placeholder="Latitude"
         formControlName="lat">
+      <br />
       <button class="btn btn-primary"
         type="button"
         (ngSubmit)='getLonLat()'
         >Search</button>
+    </div>
     </form>
   </div>
 </div>
