modify styling and component layout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 <app-header></app-header>
 <div class="container-fluid">
-  <app-search></app-search>
+  <div class="row">
+    <app-search class="col"></app-search>
+    <app-map class="col"></app-map>
+  </div>
+  <hr>
   <app-forecast></app-forecast>
 </div>
