--- a/src/app/forecast/forecast.component.html
+++ b/src/app/forecast/forecast.component.html
@@ -1,6 +1,9 @@
-<div class="weather">
-  <ul class="list-group"
-    *ngFor="let item of weather.list | slice:0:5; let i=index">
-    <li class="list-group-item">{{ item.dt }}</li>
-  </ul>
+<div class="container">
+  <div class="row">
+    
+    <ul class="list-group"
+      *ngFor="let item of weather.list | slice:0:5; let i=index">
+      <li class="list-group-item">{{ item.dt }}</li>
+    </ul>
+  </div>
 </div>
