fix errors in forecast component

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -11,7 +11,7 @@
       (click)='getCity()'
       >Search</button>
   </div>
-    <h3 class="or">Or view map of your location</h3>
+    <h3 class="or">Or view a table of your location</h3>
   <div class="form-row">
     <input type="text"
       class= "form-control col"
