--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -27,7 +27,8 @@
     <br />
     <button class="btn btn-primary"
       type="button"
-      (ngSubmit)='getLonLat()'
+      (click)='getLonLat()'
       >Search</button>
   </div>
 </form>
+<h1 class="searchparam">{{ search }}</h1>
