--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -11,18 +11,16 @@
       (click)='getCity()'
       >Search</button>
   </div>
-    <h3 class="or">Or view a table of your location</h3>
+    <h3 class="or">Or view a table of your location by:</h3>
   <div class="form-row">
     <input type="text"
       class= "form-control col"
       placeholder="Longitutde"
-      value="{{lon}}"
       formControlName="lon">
     <br />
     <input type="text"
       class= "form-control col"
       placeholder="Latitude"
-      value="{{lat}}"
       formControlName="lat">
     <br />
     <button class="btn btn-primary"
