change container size for results table

--- a/src/app/forecast/forecast.component.html
+++ b/src/app/forecast/forecast.component.html
@@ -41,7 +41,7 @@
       </div>
     </div>
   </div>
-  <div class="col"
+  <div class="col-lg-10"
     *ngIf="visible === 2">
     <table class="table results-table">
         <tr>
